main/default/objects/Performance_Competency__c/Performance_Competency__c.object-meta.xml
<CustomObject>
    <label>Performance Competency</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Performance Competency  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Performance Competencies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>