main/default/objects/Performance_Competency__c/fields/Career_Track__c.field-meta.xml
<CustomField>
    <fullName>Career_Track__c</fullName>
    <label>Career Track</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Career_Track</valueSetName>
    </valueSet>
</CustomField>