main/default/objects/Performance_Competency__c/fields/Competency__c.field-meta.xml
<CustomField>
    <fullName>Competency__c</fullName>
    <label>Competency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competency</valueSetName>
    </valueSet>
</CustomField>