main/default/objects/Performance_Competency__c/fields/Sub_Competencies__c.field-meta.xml
<CustomField>
    <fullName>Sub_Competencies__c</fullName>
    <label>Sub-Competencies</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Competency__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Sub_Competencies</valueSetName>
    </valueSet>
</CustomField>