main/default/objects/Performance_Competency__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Career_Track__c</columns>
    <columns>Competency__c</columns>
    <columns>Sub_Competencies__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>